--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMSelectChannelVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMSelectChannelVC.xib
@@ -23,20 +23,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H1C-5y-LKH">
-                    <rect key="frame" x="0.0" y="641" width="414" height="221"/>
+                    <rect key="frame" x="0.0" y="616" width="414" height="246"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选择取款方式" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="het-fo-s7M">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选择提现方式" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="het-fo-s7M">
                             <rect key="frame" x="147" y="15" width="120" height="28"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="28" id="1Lb-2y-gpg"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
-                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Cfe-gg-cvo">
-                            <rect key="frame" x="0.0" y="58" width="414" height="163"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <rect key="frame" x="0.0" y="60.5" width="414" height="185.5"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </tableView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="30G-vf-fNR">
                             <rect key="frame" x="371" y="11.5" width="35" height="35"/>
@@ -50,16 +50,27 @@
                                 <action selector="closeBtnClicked:" destination="-1" eventType="touchUpInside" id="gOb-ZC-m7D"/>
                             </connections>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P2d-z1-mVf">
+                            <rect key="frame" x="0.0" y="59.5" width="414" height="0.5"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="0.5" id="EjR-Vu-A9x"/>
+                            </constraints>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" red="0.15294117647058825" green="0.15294117647058825" blue="0.28627450980392155" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="het-fo-s7M" firstAttribute="top" secondItem="H1C-5y-LKH" secondAttribute="top" constant="15" id="2DP-wx-CeT"/>
                         <constraint firstItem="het-fo-s7M" firstAttribute="centerX" secondItem="H1C-5y-LKH" secondAttribute="centerX" id="3Gw-bg-P1Y"/>
                         <constraint firstItem="Cfe-gg-cvo" firstAttribute="leading" secondItem="H1C-5y-LKH" secondAttribute="leading" id="6iv-Fk-u1t"/>
-                        <constraint firstAttribute="height" constant="221" id="Xi5-86-F3B"/>
+                        <constraint firstAttribute="trailing" secondItem="P2d-z1-mVf" secondAttribute="trailing" id="BAi-mq-jwd"/>
+                        <constraint firstItem="P2d-z1-mVf" firstAttribute="leading" secondItem="H1C-5y-LKH" secondAttribute="leading" id="TWd-6M-KRx"/>
+                        <constraint firstAttribute="height" constant="246" id="Xi5-86-F3B"/>
                         <constraint firstAttribute="bottom" secondItem="Cfe-gg-cvo" secondAttribute="bottom" id="Xjp-Yh-MeO"/>
                         <constraint firstAttribute="trailing" secondItem="30G-vf-fNR" secondAttribute="trailing" constant="8" id="d6a-WO-nxQ"/>
-                        <constraint firstItem="Cfe-gg-cvo" firstAttribute="top" secondItem="het-fo-s7M" secondAttribute="bottom" constant="15" id="i7t-w5-TQB"/>
+                        <constraint firstItem="P2d-z1-mVf" firstAttribute="top" secondItem="het-fo-s7M" secondAttribute="bottom" constant="16.5" id="dYU-Ug-bEh"/>
+                        <constraint firstItem="Cfe-gg-cvo" firstAttribute="top" secondItem="het-fo-s7M" secondAttribute="bottom" constant="17.5" id="i7t-w5-TQB"/>
                         <constraint firstAttribute="trailing" secondItem="Cfe-gg-cvo" secondAttribute="trailing" id="jsG-Ni-HwW"/>
                         <constraint firstItem="30G-vf-fNR" firstAttribute="centerY" secondItem="het-fo-s7M" secondAttribute="centerY" id="sgQ-uk-FbC"/>
                     </constraints>
