--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMSelectChannelCell.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMSelectChannelCell.xib
@@ -12,87 +12,83 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KYMSelectChannelCell" rowHeight="49" id="KGk-i7-Jjw" customClass="KYMSelectChannelCell">
-            <rect key="frame" x="0.0" y="0.0" width="411" height="93"/>
+            <rect key="frame" x="0.0" y="0.0" width="411" height="81"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="411" height="93"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="411" height="81"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HnL-8B-6Da">
-                        <rect key="frame" x="15" y="0.0" width="381" height="66"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="56m-l1-qTV">
-                                <rect key="frame" x="16" y="12" width="40" height="42"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="ZQ2-8g-EiN"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="急速转卡" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1Y-AQ-rBe">
-                                <rect key="frame" x="70" y="12" width="64" height="22.5"/>
-                                <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="16"/>
-                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="返利0.5%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ec-mg-kL4">
-                                <rect key="frame" x="70" y="36.5" width="54" height="17"/>
-                                <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mwd_selected" translatesAutoresizingMaskIntoConstraints="NO" id="Z8E-Sv-7DF">
-                                <rect key="frame" x="355" y="40" width="26" height="26"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="25.760000000000002" id="7hN-mg-qWn"/>
-                                    <constraint firstAttribute="height" constant="25.84" id="g2X-d6-px4"/>
-                                </constraints>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mwd_recommend" translatesAutoresizingMaskIntoConstraints="NO" id="cGV-x6-qh3">
-                                <rect key="frame" x="324" y="0.0" width="57" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="17" id="4wt-1j-Qb2"/>
-                                    <constraint firstAttribute="width" constant="57" id="HCh-hz-Td1"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="急速转卡" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1Y-AQ-rBe">
+                        <rect key="frame" x="75" y="29.5" width="73" height="22.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="66" id="7ln-uL-qxx"/>
-                            <constraint firstAttribute="trailing" secondItem="Z8E-Sv-7DF" secondAttribute="trailing" id="NcO-QT-KB2"/>
-                            <constraint firstItem="1ec-mg-kL4" firstAttribute="leading" secondItem="56m-l1-qTV" secondAttribute="trailing" constant="14" id="Ti4-r6-9lb"/>
-                            <constraint firstItem="56m-l1-qTV" firstAttribute="leading" secondItem="HnL-8B-6Da" secondAttribute="leading" constant="16" id="bZh-tL-EWl"/>
-                            <constraint firstItem="C1Y-AQ-rBe" firstAttribute="top" secondItem="HnL-8B-6Da" secondAttribute="top" constant="12" id="c9T-Vk-sLC"/>
-                            <constraint firstItem="C1Y-AQ-rBe" firstAttribute="leading" secondItem="56m-l1-qTV" secondAttribute="trailing" constant="14" id="edo-3C-qV2"/>
-                            <constraint firstItem="cGV-x6-qh3" firstAttribute="top" secondItem="HnL-8B-6Da" secondAttribute="top" id="iGH-KK-qcv"/>
-                            <constraint firstAttribute="bottom" secondItem="1ec-mg-kL4" secondAttribute="bottom" constant="12.5" id="koq-ig-B4I"/>
-                            <constraint firstAttribute="bottom" secondItem="Z8E-Sv-7DF" secondAttribute="bottom" id="uhT-Uy-ufF"/>
-                            <constraint firstItem="56m-l1-qTV" firstAttribute="top" secondItem="HnL-8B-6Da" secondAttribute="top" constant="12" id="xAa-Lh-dq8"/>
-                            <constraint firstAttribute="bottom" secondItem="56m-l1-qTV" secondAttribute="bottom" constant="12" id="xY6-N8-H7e"/>
-                            <constraint firstAttribute="trailing" secondItem="cGV-x6-qh3" secondAttribute="trailing" id="zcN-fH-pBx"/>
+                            <constraint firstAttribute="height" constant="22.5" id="Rl6-id-zVi"/>
+                            <constraint firstAttribute="width" constant="73" id="coj-bD-kWk"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="18"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="56m-l1-qTV">
+                        <rect key="frame" x="15" y="16.5" width="48" height="48"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="48" id="K7J-Oc-upn"/>
+                            <constraint firstAttribute="height" constant="48" id="XBV-Wl-Q4v"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LN7-Fg-195">
+                        <rect key="frame" x="0.0" y="80.5" width="411" height="0.5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="MDz-5T-JgP"/>
                         </constraints>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fjr-GX-T5n">
+                        <rect key="frame" x="376" y="30.5" width="20" height="20"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="JRA-CK-sBt"/>
+                            <constraint firstAttribute="height" constant="20" id="Oyh-wf-ZUz"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="返利0.5%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ec-mg-kL4">
+                        <rect key="frame" x="156" y="32" width="54" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="Bpu-5c-fdc"/>
+                            <constraint firstAttribute="width" constant="54" id="YGj-SA-vLU"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                        <color key="textColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="HnL-8B-6Da" secondAttribute="trailing" constant="15" id="FTX-97-vvL"/>
-                    <constraint firstAttribute="bottom" secondItem="HnL-8B-6Da" secondAttribute="bottom" constant="8" id="GBK-eA-W8F"/>
-                    <constraint firstItem="HnL-8B-6Da" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="X9R-Ce-FAg"/>
-                    <constraint firstItem="HnL-8B-6Da" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="zH9-hU-U9n"/>
+                    <constraint firstItem="LN7-Fg-195" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="1uk-DD-CqH"/>
+                    <constraint firstAttribute="trailing" secondItem="fjr-GX-T5n" secondAttribute="trailing" constant="15" id="7lG-aY-ZWk"/>
+                    <constraint firstItem="56m-l1-qTV" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="8U4-VR-IqC"/>
+                    <constraint firstItem="fjr-GX-T5n" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="9sz-a5-o43"/>
+                    <constraint firstAttribute="bottom" secondItem="LN7-Fg-195" secondAttribute="bottom" id="Gga-0R-AOd"/>
+                    <constraint firstAttribute="trailing" secondItem="LN7-Fg-195" secondAttribute="trailing" id="bdh-30-XqM"/>
+                    <constraint firstItem="C1Y-AQ-rBe" firstAttribute="leading" secondItem="56m-l1-qTV" secondAttribute="trailing" constant="12" id="ceM-JU-iFF"/>
+                    <constraint firstItem="1ec-mg-kL4" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="djS-JL-0bM"/>
+                    <constraint firstItem="56m-l1-qTV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="ghw-b3-jtP"/>
+                    <constraint firstItem="C1Y-AQ-rBe" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="mPA-QF-rT1"/>
+                    <constraint firstItem="1ec-mg-kL4" firstAttribute="leading" secondItem="C1Y-AQ-rBe" secondAttribute="trailing" constant="8" id="vJw-QA-hhB"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="descLable" destination="1ec-mg-kL4" id="o5k-40-Lzy"/>
                 <outlet property="iconImageView" destination="56m-l1-qTV" id="GFw-Ss-rFV"/>
-                <outlet property="mainView" destination="HnL-8B-6Da" id="sYW-cN-SDe"/>
-                <outlet property="recommendIcon" destination="cGV-x6-qh3" id="ji1-6c-e9E"/>
-                <outlet property="selectedIcon" destination="Z8E-Sv-7DF" id="YkC-c5-6uF"/>
+                <outlet property="selectedIcon" destination="fjr-GX-T5n" id="ahn-8t-gdk"/>
                 <outlet property="titleLable" destination="C1Y-AQ-rBe" id="LPt-Ba-Bmw"/>
             </connections>
             <point key="canvasLocation" x="203.62318840579712" y="93.415178571428569"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="mwd_recommend" width="57" height="17"/>
-        <image name="mwd_selected" width="26" height="26"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
