--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewNoticeView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewNoticeView.xib
@@ -14,18 +14,8 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="400"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="重要提醒：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vGm-N4-ix2">
-                    <rect key="frame" x="0.0" y="0.0" width="65" height="20"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="hFd-2G-WFP"/>
-                        <constraint firstAttribute="width" constant="65" id="lKf-go-CjO"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
-                    <color key="textColor" red="0.85882352939999995" green="0.72941176470000002" blue="0.51764705879999995" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ga-dQ-71I">
-                    <rect key="frame" x="0.0" y="21" width="414" height="90"/>
+                    <rect key="frame" x="18" y="21" width="396" height="90"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="90" id="unn-vP-4cM"/>
                     </constraints>
@@ -34,7 +24,24 @@
 3、若订单超时，取款未到账，请及时联系客服。
 4、在规定时间内点击确认取款，可以获得0.5%返利，礼金无上限。</string>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
-                    <color key="textColor" red="0.50588235290000005" green="0.52941176469999995" blue="0.56862745100000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" red="0.61960784313725492" green="0.61960784313725492" blue="0.61960784313725492" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mwd_warning" translatesAutoresizingMaskIntoConstraints="NO" id="H0h-gn-R02">
+                    <rect key="frame" x="0.0" y="2" width="14" height="14"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="14" id="9RF-yC-Onl"/>
+                        <constraint firstAttribute="height" constant="14" id="cfy-ni-tEC"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="重要提醒：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vGm-N4-ix2">
+                    <rect key="frame" x="18" y="0.0" width="65" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="hFd-2G-WFP"/>
+                        <constraint firstAttribute="width" constant="65" id="lKf-go-CjO"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                    <color key="textColor" red="0.61960784313725492" green="0.61960784313725492" blue="0.61960784313725492" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
@@ -42,13 +49,18 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="vGm-N4-ix2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="6pl-sU-3yr"/>
-                <constraint firstItem="vGm-N4-ix2" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="BEY-9u-iTR"/>
+                <constraint firstItem="H0h-gn-R02" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="2" id="Aa8-bD-x1U"/>
                 <constraint firstItem="2ga-dQ-71I" firstAttribute="top" secondItem="vGm-N4-ix2" secondAttribute="bottom" constant="1" id="TPP-mn-PoJ"/>
-                <constraint firstItem="2ga-dQ-71I" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="cXJ-V9-e6H"/>
+                <constraint firstItem="vGm-N4-ix2" firstAttribute="leading" secondItem="H0h-gn-R02" secondAttribute="trailing" constant="4" id="VwN-FC-rhG"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="2ga-dQ-71I" secondAttribute="trailing" id="dEM-Rc-d0Z"/>
+                <constraint firstItem="H0h-gn-R02" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="obK-y6-Yhx"/>
+                <constraint firstItem="2ga-dQ-71I" firstAttribute="leading" secondItem="vGm-N4-ix2" secondAttribute="leading" id="xZt-oW-UFl"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="139" y="135"/>
         </view>
     </objects>
+    <resources>
+        <image name="mwd_warning" width="14" height="14"/>
+    </resources>
 </document>
