--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewNoticeView2.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewNoticeView2.xib
@@ -25,7 +25,7 @@
                             <string key="text">请您耐心待确认到账，网络通畅的情况下，
 预计5-15分钟后到账</string>
                             <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="14"/>
-                            <color key="textColor" red="0.035294117647058823" green="0.58039215686274503" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="textColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="如果超时未到账请点击我要催单" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eUw-cu-Q6k">
@@ -34,11 +34,11 @@
                                 <constraint firstAttribute="height" constant="17" id="Xbv-jF-rJ9"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
-                            <color key="textColor" red="0.50588235290000005" green="0.52941176469999995" blue="0.56862745100000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="textColor" red="0.42745098039215684" green="0.46666666666666667" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.21568627450980393" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="eUw-cu-Q6k" secondAttribute="trailing" id="Bkv-nz-qD8"/>
                         <constraint firstItem="N0m-YB-1QV" firstAttribute="centerX" secondItem="FoP-ct-tlY" secondAttribute="centerX" id="EKQ-6b-vTE"/>
